Added google auth

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,9 @@
 		<p style="text-align: center;padding:0 10% 0 10%;">Hello Everyone! Login via facebook to the website. We have also added a section for suggestions as we ran out of ideas. Feel free to send us your feedback and suggestions. Enjoy!</p>
 	</div>
 
-	<a href="/auth/facebook"><center><img style="width: 40%;" src="/images/login.png"></center></a>	
-	
+	<a href="/auth/facebook"><center><img style="width: 40%;" src="/images/login.png"></center></a>
+	<a href="/auth/google" class="btn btn-danger"><center><span style="color: red" class="fa fa-google-plus"></span></center> Google</a>
+
 </div>
 </body>
 </html>
