--- a/views/room.ejs
+++ b/views/room.ejs
@@ -39,8 +39,8 @@
 			}
 		})
 
-		messages.on('messagefeed', function(data){
-			var msgs = JSON.parse(data);
+		messages.on('messagefeed', function(reqtran){
+			var msgs = JSON.parse(reqtran);
 			updateMessageFeed(msgs.userPic, msgs.message);
 		})
 
