Sent translated output to socket

--- a/views/gethelp.ejs
+++ b/views/gethelp.ejs
@@ -19,9 +19,9 @@
 				var procData = JSON.parse(data);
 				$('.roomlist').html('');
 				for (var i = 0; i < procData.length; i++) {
-					var str = '<div><a class="issuename" href="gethelp/room/' + procData[i].room_number + '"><li>' + procData[i].room_name +'</li></a></div>';
-					$('.roomlist').prepend(str);
-				}
+                  var str = '<div><a class="issuename" href="gethelp/room/' + procData[i].room_number + '"><li>' + procData[i].room_name + '</li></a></div>';
+                  $('.roomlist').prepend(str);
+                }
 			})
 			$(document).on('click', '#create', function() {
 				var room_name = $('.newRoom').val();
@@ -29,6 +29,7 @@
 					var room_number = parseInt(Math.random() * 10000);
 					socket.emit('newroom', {room_name:room_name, room_number:room_number});
 					$('.newRoom').val('');
+                  localStorage.setItem("Room",room_number);
 				}
 			})
 		})
