--- a/views/user.ejs
+++ b/views/user.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title><%- title %></title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
@@ -44,8 +44,6 @@
 			<a href="/user/gethelp"><button class="nav">Get Help</button></a>
 			<a href="/logout"><button class="nav">Logout</button></a>			
 		</div>
-		<div style="top:1%; position: absolute; left: 10px;"><a href=""><i class="fa fa-github" style="font-size: 3em;"></i></a></div>
-		<div style="position: absolute; top: 2%; right: 10px;"><a href="">Give your Suggestions</a></div>
 		
 	<div id="platform">
 		<p>
