--- a/views/gethelp.ejs
+++ b/views/gethelp.ejs
@@ -4,7 +4,7 @@
 <head>
 	<title>My Account</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,900' rel='stylesheet' type='text/css'>
@@ -44,8 +44,8 @@
 			<p>Fill in all informations</p>
 		</header>
 		<form>
-			<div class="input-section class-section">
-				<input class="class" type="class" placeholder="ENTER YOUR CLASS NAME HERE" autocomplete="off" />
+			<div class="input-section class-section entry">
+				<input class="class newRoom" type="class" placeholder="ENTER YOUR CLASS NAME HERE" autocomplete="off" />
 				<div class="animated-button">
 					<span class="icon-paper-plane">
 						<i class="fa fa-list-alt"></i>
@@ -143,9 +143,6 @@
 				<p>ACCOUNT CREATED</p>
 			</div>
 						<div class="newroom">
-							<div id="entry">
-								<input type="text" class="newRoom" autocomplete="off" placeholder="Enter your issue here.">
-							</div>
 							<div id="enter">
 								<button id="create">Get Help</button>
 							</div>
@@ -158,8 +155,8 @@
 						</p>
 		</form>
 	</div>
-	<script type="text/javascript" src="jquery-1.10.2.js"></script>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="/jquery-1.10.2.js"></script>
+	<script type="text/javascript" src="/script.js"></script>
 </body>
 
 </html>
