--- a/views/user.ejs
+++ b/views/user.ejs
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title><%- title %></title>
 
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
