--- a/views/gethelp.ejs
+++ b/views/gethelp.ejs
@@ -132,7 +132,7 @@
 				<div class="animated-button" onclick="updateCountry()">
 					<div class="newroom">
 						<div id="enter">
-							<button id="create">Get Help</button>
+							<button id="create">Submit</button>
 						</div>
 					</div>
 				</div>
